Do not remove empty lines in HTML for Outlook

Thanks to Frank Vanderham for the patch.

BUG: 207779