messagecomposer/kmeditor.cpp
@@ -39,6 +39,10 @@
 #include <QShortcut>
 #include <QTextLayout>
 #include <QTimer>
+#include <QWebElement>
+#include <QWebElementCollection>
+#include <QWebFrame>
+#include <QWebPage>
 
 using namespace KPIMTextEdit;
 
@@ -684,6 +688,41 @@ void KMeditor::fillComposerTextPart ( TextPart* textPart ) const
     textPart->setCleanHtml( toCleanHtml() );
     textPart->setEmbeddedImages( embeddedImages() );
   }
+}
+
+QString KMeditor::toCleanHtml() const
+{
+  const QString textEditHTML = toHtml();
+
+  // construct a non-visual QWebPage - that'll hook us into Qt's HTML parser from WebKit
+  QWebPage webpage( 0 );
+  QWebFrame *webframe = webpage.mainFrame();
+  webframe->setHtml( textEditHTML );
+  QWebElement docElement = webframe->documentElement();
+
+  // fix 1 - empty lines should show as empty lines - MS Outlook treats margin-top:0px; as
+  // a non-existing line.
+  // Although we can simply remove the margin-top style property, we still get unwanted results
+  // if you have three or more empty lines. It's best to replace empty <p> elements with <br>.
+  // As per http://www.w3.org/TR/xhtml1/dtds.html#a_dtd_XHTML-1.0-Strict, <br> elements are still proper
+  // HTML.
+  QWebElementCollection paragraphs = docElement.findAll( QString::fromAscii( "p" ) );
+  foreach (QWebElement paraElement, paragraphs) {
+    QString paraContent = paraElement.toPlainText();
+    // Only make a change when the paragraph content is empty
+    if ( paraContent.isEmpty() ) {
+      paraElement.replace( QString::fromAscii( "<br />" ) );
+    }
+  }
+  // fix 2 - ordered and unordered lists - MS Outlook treats margin-left:0px; as
+  // a non-existing number; e.g: "1. First item" turns into "First Item"
+  QWebElementCollection lists = docElement.findAll( QString::fromAscii( "ol,ul" ) );
+  foreach (QWebElement listElement, lists) {
+    //TODO in the future, we may want to explicitly set the margin-left=0 with the Composer window itself, which
+    //     would be overwritten here again. This will likely require a rewrite of the KMEditor altogether, though.
+    listElement.setStyleProperty( QString::fromAscii( "margin-left" ), QString( ) );
+  }
+  return webframe->toHtml();
 }
 
 #include "kmeditor.moc"
